--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
  - ln -s ansible-scumblr ../scumblr
  - git clone https://github.com/juju4/ansible-sketchy.git ../sketchy
  - git clone https://github.com/zzet/ansible-rbenv-role ../zzet.rbenv
-## for local travis execution as we use same default.yml than kitchen
+## for local travis execution as we use same travis.yml than kitchen
  - mkdir /tmp/kitchen
  - ln -s /home/travis/build/juju4/ansible-scumblr/test/integration/default/tmp /tmp/kitchen/tmp
 install:
@@ -19,15 +19,15 @@ script:
   - "echo \"[test-kitchen]\nlocalhost\" > inventory"
 
 # Check the role/playbook's syntax.
-  - "ansible-playbook -i inventory --syntax-check test/integration/default/default.yml"
+  - "ansible-playbook -i inventory --syntax-check test/integration/default/travis.yml"
 
 # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook -i inventory --connection=local --sudo -vvvv test/integration/default/default.yml"
+  - "ansible-playbook -i inventory --connection=local --sudo -vvvv test/integration/default/travis.yml"
 
 # Run the role/playbook again, checking to make sure it's idempotent.
-  - "ansible-playbook -i inventory test/integration/default/default.yml --connection=local --sudo | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0)  || (echo 'Idempotence test: fail' && exit 1)"
+  - "ansible-playbook -i inventory test/integration/default/travis.yml --connection=local --sudo | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0)  || (echo 'Idempotence test: fail' && exit 1)"
 #  - >
-#  ansible-playbook -i inventory test/integration/default/default.yml --connection=local --sudo
+#  ansible-playbook -i inventory test/integration/default/travis.yml --connection=local --sudo
 #  | grep -q 'changed=0.*failed=0'
 #  && (echo 'Idempotence test: pass' && exit 0)
 #  || (echo 'Idempotence test: fail' && exit 1)
