--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -95,8 +95,10 @@
 
 - stat: path="{{ scumblr_root }}/db/{{ scumblr_rails_env }}.sqlite3"
   register: railsdb
+## travis only (kitchen OK): FAILED! => {"changed": true, "cmd": ["bash", "-lc", "rake db:create"], "delta": "0:00:02.775480", "end": "2016-04-07 11:39:09.555950", "failed": true, "invocation": {"module_args": {"_raw_params": "bash -lc \"rake db:create\"", "_uses_shell": false, "chdir": "/var/Scumblr", "creates": null, "executable": null, "removes": null, "warn": true}, "module_name": "command"}, "rc": 1, "start": "2016-04-07 11:39:06.780470", "stderr": "rake aborted!\nGem::LoadError: You have already activated rake 10.4.2, but your Gemfile requires rake 10.3.2. Prepending `bundle exec` to your command may solve this.\n/usr/local/rvm/gems/ruby-2.2.3/gems/bundler-1.11.2/lib/bundler/runtime.rb:34:in `block in setup'\n/usr/local/rvm/gems/ruby-2.2.3/gems/bundler-1.11.2/lib/bundler/runtime.rb:19:in `setup'\n/usr/local/rvm/gems/ruby-2.2.3/gems/bundler-1.11.2/lib/bundler.rb:92:in `setup'\n/usr/local/rvm/gems/ruby-2.2.3/gems/bundler-1.11.2/lib/bundler/setup.rb:18:in `<top (required)>'\n/var/Scumblr/config/boot.rb:21:in `<top (required)>'\n/var/Scumblr/config/application.rb:16:in `<top (required)>'\n/var/Scumblr/Rakefile:5:in `<top (required)>'\n(See full trace by running task with --trace)", "stdout": "", "stdout_lines": [], "warnings": []}
 - name: rake db:create
-  command: "bash -lc \"rake db:create\" chdir={{ scumblr_root }}"
+#  command: "bash -lc \"rake db:create\" chdir={{ scumblr_root }}"
+  command: "bash -lc \"bundle exec rake db:create\" chdir={{ scumblr_root }}"
   environment:
     RAILS_ENV: '{{ scumblr_rails_env }}'
   become: yes
@@ -109,7 +111,7 @@
 - stat: path={{ scumblr_root }}/.ansible_dbschemaload
   register: touchdbschemaload
 - name: rake db:schema:load
-  command: "bash -lc \"rake db:schema:load\" chdir={{ scumblr_root }}"
+  command: "bash -lc \"bundle exec rake db:schema:load\" chdir={{ scumblr_root }}"
   environment:
     RAILS_ENV: '{{ scumblr_rails_env }}'
   become: yes
@@ -124,7 +126,7 @@
   when: not touchdbschemaload.stat.exists
 
 - name: generate a rake secret 1
-  command: "bash -lc \"rake secret\" chdir={{ scumblr_root }}"
+  command: "bash -lc \"bundle exec rake secret\" chdir={{ scumblr_root }}"
   environment:
     RAILS_ENV: '{{ scumblr_rails_env }}'
   become: yes
@@ -140,7 +142,7 @@
     - restart rails server
 
 - name: generate a rake secret 2
-  command: "bash -lc \"rake secret\" chdir={{ scumblr_root }}"
+  command: "bash -lc \"bundle exec rake secret\" chdir={{ scumblr_root }}"
   environment:
     RAILS_ENV: '{{ scumblr_rails_env }}'
   become: yes
