--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -4,7 +4,7 @@
     www_user: nginx
     redis_svc: redis
     redis_conf: /etc/redis.conf
-#    supervisor_svc: supervisor
+    supervisor_svc: supervisord
 
 - name: Redhat | Scumblr dependencies packages install
   yum: name={{item}} state=present update_cache=yes
