--- a/test/integration/postgres/default.yml
+++ b/test/integration/postgres/default.yml
@@ -3,7 +3,12 @@
 - hosts: all
   vars:
     - scumblr_rails_user: _scumblr
-    - scumblr_db_adapter: sqlite3
+    - scumblr_db_adapter: postgresql
+    - scumblr_db_database: db-scumblr-postgresql
+    - scumblr_db_user: user-scumblr
+    - scumblr_db_pass: pass-scumblr
+    - scumblr_db_host: localhost
+    - scumblr_db_port: 5432
     - rbenv:
         env: user
         version: v0.4.0
@@ -13,11 +18,17 @@
     - rbenv_repo: "https://github.com/sstephenson/rbenv.git"
     - rbenv_plugins:
         - { name: "ruby-build",         repo: "https://github.com/sstephenson/ruby-build.git",         version: "v20151028" }
-        - { name: "rbenv-rehash",       repo: "https://github.com/rbenv/rbenv-gem-rehash.git",         version: "v1.0.0" }
     - rbenv_users:
         - "{{ scumblr_rails_user }}"
+    - postgresql_databases:
+        - name: "{{ scumblr_db_database }}_{{ scumblr_rails_env }}"
+    - postgresql_users:
+        - name: "{{ scumblr_db_user }}"
+          password: "{{ scumblr_db_pass }}"
+          db: "{{ scumblr_db_database }}_{{ scumblr_rails_env }}"
   roles:
     - { role: adduser, adduser_user_name: _scumblr, adduser_user_home: '/home/_scumblr', adduser_user_comments: 'Scumblr rails app user', adduser_public_keys: [], adduser_sudoroot: false }
+    - geerlingguy.postgresql
     - sketchy
     - scumblr
 
