--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,29 +1,47 @@
 ---
 driver:
-  name: vagrant
+  name: lxd_cli
+
+transport:
+  name: sftp
 
 provisioner:
   name: ansible_playbook
-  roles_path: ../../roles
+  roles_path: ../
   hosts: test-kitchen
 #  ansible_verbose: true
   ansible_verbose: false
   ansible_verbosity: 3
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
-#  name: chef_solo
+  ansible_yum_repo: http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+#  require_chef_omnibus: false
+  require_ansible_omnibus: true
+#  require_chef_for_busser: false
+  enable_yum_epel: true
+  ansible_connection: ssh
 
 platforms:
+  - name: ubuntu-16.04
   - name: ubuntu-14.04
-    driver_config:
-      network:
-        - ["forwarded_port", {guest: 8000, host: 8894}]
-  - name: centos-7.1
-    driver_config:
-      network:
-        - ["forwarded_port", {guest: 8000, host: 8897}]
+#  - name: ubuntu-12.04
+  - name: centos-7
+#  - name: centos-6
+#  - name: alpine-3.4
 
 suites:
   - name: default
     run_list:
     attributes:
+  - name: postgres
+    run_list:
+    attributes:
+    includes:
+      - ubuntu-16.04
+#      - ubuntu-14.04
+#      - centos-7
+#      - centos-6
+    provisioner:
+      name: ansible_playbook
+      playbook: test/integration/postgres/default.yml
+
 
