--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,18 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
  - ln -s ansible-scumblr ../scumblr
- - git clone https://github.com/juju4/ansible-sketchy.git ../sketchy
- - git clone https://github.com/juju4/ansible-rbenv-role.git ../zzet.rbenv
+ - ./get-dependencies.sh
 ## for local travis execution as we use same travis.yml than kitchen
  - mkdir /tmp/kitchen
  - ln -s /home/travis/build/juju4/ansible-scumblr/test/integration/default/tmp /tmp/kitchen/tmp
+## serverspec test
+ - sudo apt-get install -qq ruby2.0 rake
+ - sudo gem2.0 install serverspec
 install:
   - pip install ansible
   - ansible --version
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - gem2.0 --version
 script:
   - "echo \"[test-kitchen]\nlocalhost\" > inventory"
 
@@ -28,3 +31,6 @@ script:
 ## FIXME! known fail
   - "ansible-playbook -i inventory test/integration/default/default.yml --connection=local --sudo | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0)  || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 0)"
 
+# Serverspec
+#  - "test/integration/default/serverspec/run-local-tests.sh"
+  - "cd test/integration/default/serverspec/ && bundle exec rake spec"
