--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,12 +1,6 @@
 ---
 ## https://github.com/Netflix/Scumblr/wiki
 
-- set_fact:
-    www_user: www-data
-    redis_svc: redis-server
-    redis_conf: /etc/redis/redis.conf
-    supervisor_svc: supervisor
-
 - name: apt | scumblr packages dependencies
   apt: name={{item}} state=present update_cache=yes cache_valid_time=3600
   with_items:
@@ -45,30 +39,33 @@
   command: apt-get --dry-run autoremove
   register: check_autoremove
   changed_when: False
-- debug: var=check_autoremove
+#- debug: var=check_autoremove
 - name: apt | Autoremove unused packages
   command: apt-get -y autoremove
 #  when: check_autoremove.rc != 0
   when: '"The following packages will be REMOVED:" in check_autoremove.stdout'
 
-- stat: path=/etc/init/sidekiq.conf
-  register: sidekiqinit
-## https://github.com/mperham/sidekiq/wiki/Deployment
-- name: download upstart script for sidekiq
-  get_url:
-    url: https://raw.githubusercontent.com/mperham/sidekiq/master/examples/upstart/sidekiq.conf
-    dest: /etc/init/sidekiq.conf
-    mode: 0644
-  when: not sidekiqinit.stat.exists
+- debug: var=ansible_distribution_release
+- block:
+    - stat: path=/etc/init/sidekiq.conf
+      register: sidekiqinit
+    ## https://github.com/mperham/sidekiq/wiki/Deployment
+    - name: Ubuntu | download upstart script for sidekiq
+      get_url:
+        url: https://raw.githubusercontent.com/mperham/sidekiq/master/examples/upstart/sidekiq.conf
+        dest: /etc/init/sidekiq.conf
+        mode: 0644
+      when: not sidekiqinit.stat.exists
 
-- name: review configuration of upstart script for sidekiq
-  replace: dest=/etc/init/sidekiq.conf regexp="{{ item.re }}" replace="{{ item.rep }}"
-  with_items:
-    - { re: '^# setuid deploy', rep: 'setuid {{ scumblr_rails_user }}' }
-    - { re: '^# env HOME=/home/deploy', rep: 'env HOME={{ scumblr_root }}' }
-    - { re: '^  # source /home/apps/.bash_profile', rep: '  source /home/{{ scumblr_rails_user }}/.bashrc' }
-    - { re: 'cd /var/www/app', rep: 'cd {{ scumblr_root }}' }
-  notify:
-    - restart rails sidekiq
-    - restart rails server
+    - name: Ubuntu | review configuration of upstart script for sidekiq
+      replace: dest=/etc/init/sidekiq.conf regexp="{{ item.re }}" replace="{{ item.rep }}"
+      with_items:
+        - { re: '^# setuid deploy', rep: 'setuid {{ scumblr_rails_user }}' }
+        - { re: '^# env HOME=/home/deploy', rep: 'env HOME={{ scumblr_root }}' }
+        - { re: '^  # source /home/apps/.bash_profile', rep: '  source /home/{{ scumblr_rails_user }}/.bashrc' }
+        - { re: 'cd /var/www/app', rep: 'cd {{ scumblr_root }}' }
+      notify:
+        - restart rails sidekiq
+        - restart rails server
+  when: ansible_distribution_release == 'trusty'
 
