--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -37,7 +37,7 @@ suites:
     attributes:
     includes:
       - ubuntu-16.04
-#      - ubuntu-14.04
+      - ubuntu-14.04
 #      - centos-7
 #      - centos-6
     provisioner:
