--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ script:
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/scumblr/test/integration/default/default.yml'
 
   # Test role idempotence.
+## known fail
   - >
     sudo docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/scumblr/test/integration/default/default.yml
     | tee /tmp/idempotency.log
